--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
   </section>
   
   <footer>
-    <button id="toggleAboutBtn">👨‍💻 About the Developer</button>
+    <button id="toggleAboutBtn" style="position: relative; left: 750px;">
+    👨‍💻 About the Developer
+    </button>
+
+
 
     <div class="card about" id="aboutSection" style="display:none;">
       <h2>👨‍💻 About the Developer</h2>
@@ -295,8 +299,8 @@
   
   
   <section class="cta">
-    <h2>¿Quieres probarla?</h2>
-    <button id="demoBtn">Solicitar Demo</button>
+    <h2>Do you want to try it?</h2>
+    <button id="demoBtn">Request Demo</button>
   </section>
   
     
