--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     </div>
   </section>
 
-  <!-- ======= Screenshots placeholder ======= -->
+  <!-- ======= Screenshots ======= -->
   <section class="section" id="screens">
     <div class="section-header">
       <h2 data-i18n="screensTitle">Screens & Workflow Examples</h2>
@@ -249,16 +249,10 @@
         ICS includes professional tables, draggable modals and web reports ready for real operations.
       </p>
     </div>
-    <div class="screens-grid">
-      <div class="screen-placeholder">
-        <span data-i18n="screensPlaceholder1">Receiving & Orders module</span>
-      </div>
-      <div class="screen-placeholder">
-        <span data-i18n="screensPlaceholder2">Inventory by Location report</span>
-      </div>
-      <div class="screen-placeholder">
-        <span data-i18n="screensPlaceholder3">History & web reports</span>
-      </div>
+
+    <div class="screens-gallery">
+      <img src="images/background-html.jpg" class="screen-img" />
+      <!-- Agrega más imágenes aquí -->
     </div>
   </section>
 
