--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
       <img src="images/background-html.jpg" class="screen-img" />
       <!-- Agrega más imágenes aquí -->
     </div>
+    <button id="showMoreScreens" class="btn-secondary">Ver más</button>
   </section>
 
   <!-- ======= Contact ======= -->
