--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
 
     <div class="screens-gallery">
       <img src="images/background-html.jpg" class="screen-img" />
+      <img src="images/Login.png" class="screen-img" />
       <!-- Agrega más imágenes aquí -->
     </div>
     <button id="showMoreScreens" class="btn-secondary">Ver más</button>
@@ -318,3 +319,4 @@
   <script src="app.js"></script>
 </body>
 </html>
+
