--- a/index.html
+++ b/index.html
@@ -253,9 +253,13 @@
     <div class="screens-gallery">
       <img src="images/background-html.jpg" class="screen-img" />
       <img src="images/Login.jpg" class="screen-img" />
+      <img src="images/Main-Picture.jpg" class="screen-img" />
+      <img src="images/Ship-Pick" class="screen-img" />
+      <img src="images/Over-Pick.jpg" class="screen-img" />
+      <img src="images/History.jpg" class="screen-img" />
       <!-- Agrega más imágenes aquí -->
     </div>
-    <button id="showMoreScreens" class="btn-secondary">Ver más</button>
+    <button id="showMoreScreens" class="btn-secondary">More Pictures</button>
   </section>
 
   <!-- ======= Contact ======= -->
@@ -319,5 +323,3 @@
   <script src="app.js"></script>
 </body>
 </html>
-
-
