--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
       <img src="images/background-html.jpg" class="screen-img" />
       <img src="images/Login.jpg" class="screen-img" />
       <img src="images/Main-Picture.jpg" class="screen-img" />
-      <img src="images/Ship-Pick" class="screen-img" />
+      <img src="images/Ship-Pick.jpg" class="screen-img" />
       <img src="images/Over-Pick.jpg" class="screen-img" />
       <img src="images/History.jpg" class="screen-img" />
       <!-- Agrega más imágenes aquí -->
@@ -323,3 +323,4 @@
   <script src="app.js"></script>
 </body>
 </html>
+
