--- a/index.html
+++ b/index.html
@@ -251,12 +251,21 @@
     </div>
 
     <div class="screens-gallery">
-      <img src="images/background-html.jpg" class="screen-img" />
-      <img src="images/Login.jpg" class="screen-img" />
-      <img src="images/Main-Picture.jpg" class="screen-img" />
-      <img src="images/Ship-Pick.jpg" class="screen-img" />
-      <img src="images/Over-Pick.jpg" class="screen-img" />
-      <img src="images/History.jpg" class="screen-img" />
+      <img src="images/1background-html.jpg" class="screen-img" />
+      <img src="images/2Login.jpg" class="screen-img" />
+      <img src="images/3Main-Picture.jpg" class="screen-img" />
+      <img src="images/4History.jpg" class="screen-img" />
+      <img src="images/5Over-Pick.jpg" class="screen-img" />
+      <img src="images/6Ship-Pick.jpg" class="screen-img" />
+      <img src="images/7Receive1.jpg" class="screen-img" />
+      <img src="images/8Receive2.jpg" class="screen-img" />
+      <img src="images/9Receive3.jpg" class="screen-img" />
+      <img src="images/10Receive4.jpg" class="screen-img" />
+      <img src="images/11OrderReq1.jpg" class="screen-img" />
+      <img src="images/12OrderReqtable.jpg" class="screen-img" />
+      <img src="images/13Picking1.jpg" class="screen-img" />
+      <img src="images/14Receive5.jpg" class="screen-img" />
+
       <!-- Agrega más imágenes aquí -->
     </div>
     <button id="showMoreScreens" class="btn-secondary">More Pictures</button>
@@ -323,4 +332,3 @@
   <script src="app.js"></script>
 </body>
 </html>
-
