--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
       </p>
     </div>
 
+
     <div class="screens-gallery">
       <img src="images/1background-html.jpg" class="screen-img" />
       <img src="images/2Login.jpg" class="screen-img" />
@@ -288,7 +289,7 @@
         </p>
         <p>
           <strong data-i18n="contactEmailLabel">Email:</strong>
-          <a href="mailto:info@sanchezwebapps.com">info@sanchezwebapps.com</a>
+          <a href="sanchezwebappsllc@yahoo.com">sanchezwebappsllc@yahoo.com</a>
         </p>
         <p>
           <strong data-i18n="contactLocationLabel">Location:</strong>
